--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href='https://fonts.googleapis.com/css?family=Poppins:400,300,500,600,700' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Catamaran:200,400,500,600,800" rel="stylesheet">
+  <link rel="stylesheet" href="http://fonts.googleapis.com/earlyaccess/notosansjp.css">
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/qwerty.css">
@@ -26,42 +27,39 @@
 
   <!--****** HEADER ************** -->
 
-<header class="menu-header">
-  <div class="header-left">
-    <a class="menu-btn"><i class="icon ion-navicon"></i></a>
-  </div>
-  <nav class="pmenu pmenu-left">
-    <div class="brand-box">
-      <div class="spacer-sm"></div>
-      <div class="tx-center menu-brand">
-        <img class="" src="images/logo.png" width="100px" />
-        <p>QWERTY</p>
-      </div>
-      <div class="spacer-sm"></div>
+  <header class="menu-header">
+    <div class="header-left">
+      <a class="menu-btn"><i class="icon ion-navicon"></i></a>
     </div>
-    <ul>
-      <li class="pmenu-link"><a href="./index.html"><i class="icon ion-android-list"></i>&nbsp;&nbsp;Intro</a></li>
-      <li class="pmenu-link"><a href="./concept.html"><i class="icon ion-coffee"></i>&nbsp;&nbsp;Conception</a></li>
-      <li class="pmenu-link"><a href="./kanpe.html"><i class="icon ion-code"></i>&nbsp;&nbsp;CheetSheet</a></li>
-      <li class="pmenu-submenu">
-          <a href="#"><i class="icon ion-document-text"></i>&nbsp;&nbsp;Themses  <i class="pmenu-icon icon ion-ios-arrow-right"></i></a>
-          <ul>
-              <li class="pmenu-link"><a href="./themes/admin.html">
-                Dashboard</a></li>
-              <li class="pmenu-link"><a href="./themes/landing.html">Landing Pages</a></li>
-              <li class="pmenu-link"><a href="">Coming Soon...</a></li>
-          </ul>
-      </li>
-      <li class="pmenu-link"><a href="https://github.com/thousandjapan/qwerty" target="_blank"><i class="icon ion-social-github"></i>&nbsp;&nbsp;Guthub <i class="icon ion-android-open"></i></a></li>
-    </ul>
-  </nav>
-  <div class="header-center">
-    <a class=""><h4 class="logo">QWERTY</h4></a>
-  </div>
-  <div class="header-right">
-    <a class=""><i class="icon ion-ios-search-strong"></i></a>
-  </div>
-</header>
+    <nav class="pmenu pmenu-left">
+      <div class="brand-box">
+        <div class="spacer-sm"></div>
+        <div class="tx-center menu-brand">
+          <img class="" src="images/logo.png" width="100px" />
+          <p>QWERTY</p>
+        </div>
+        <div class="spacer-sm"></div>
+      </div>
+      <ul class="brand-ul">
+        <li class="pmenu-link active"><a href="./index.html"><i class="icon ion-android-list"></i>&nbsp;&nbsp;Intro</a></li>
+        <li class="pmenu-link"><a href="./concept.html"><i class="icon ion-coffee"></i>&nbsp;&nbsp;Conception</a></li>
+        <li class="pmenu-link"><a href="./kanpe.html"><i class="icon ion-code"></i>&nbsp;&nbsp;CheetSheet</a></li>
+        <li class="pmenu-submenu">
+            <a href="#"><i class="icon ion-document-text"></i>&nbsp;&nbsp;Themses  <i class="pmenu-icon icon ion-ios-arrow-right"></i></a>
+            <ul>
+                <li class="pmenu-link"><a href="">Coming Soon...</a></li>
+            </ul>
+        </li>
+        <li class="pmenu-link"><a href="https://github.com/thousandjapan/qwerty" target="_blank"><i class="icon ion-social-github"></i>&nbsp;&nbsp;Guthub <i class="icon ion-android-open"></i></a></li>
+      </ul>
+    </nav>
+    <div class="header-center">
+      <a href="index.html"><h4 class="logo">QWERTY</h4></a>
+    </div>
+    <div class="header-right">
+      <a class=""><i class="icon ion-ios-search-strong"></i></a>
+    </div>
+  </header>
 
 <div class="site-overlay"></div>
 
@@ -74,8 +72,8 @@
       <div class="tx-center">
         <img src="images/logo.png" width="180px" />
         <h5 class="fw-100"><span class="fw-500">Customizing</span><br class="show-xs"> is as</span><span class="fw-500"> easy</span> as pie.</h5>
-        <button class="btn-sm btn-dark menu-btn"><i class="icon ion-navicon"></i> Menu</button>
-        <a href="https://codeload.github.com/thousandjapan/qwerty/zip/master"><button class="btn-sm btn-red"><i class="icon ion-archive"></i> Download</button></a>
+        <button class="btn btn-sm menu-btn"><i class="icon ion-navicon"></i> Menu</button>
+        <a href="https://codeload.github.com/thousandjapan/qwerty/zip/master"><button class="btn btn-sm"><i class="icon ion-archive"></i> Download</button></a>
       </div>
     </div>
   </div>
