--- a/kanpe.html
+++ b/kanpe.html
@@ -4,7 +4,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>QWERTY</title>
+  <title>qwerty</title>
   <meta name="description" content="">
   <meta name="author" content="">
   <!-- Mobile Specific Metas
@@ -14,6 +14,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link href="https://fonts.googleapis.com/css?family=Catamaran:200,400,500,600,800" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosansjapanese.css">
+  <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/qwerty.css">
@@ -25,41 +26,41 @@
 </head>
 <body>
 
-  <!--****** HEADER ************** -->
+<!--****** HEADER ************** -->
 
-  <header class="menu-header">
-    <div class="header-left">
-      <a class="menu-btn"><i class="icon ion-navicon"></i></a>
-    </div>
-    <nav class="pmenu pmenu-left">
-      <div class="brand-box">
-        <div class="spacer-sm"></div>
-        <div class="tx-center menu-brand">
-          <img class="" src="images/logo.png" width="100px" />
-          <p>QWERTY</p>
-        </div>
-        <div class="spacer-sm"></div>
+<header class="menu-header">
+  <div class="header-left">
+    <a class="menu-btn"><i class="icon ion-navicon"></i></a>
+  </div>
+  <nav class="pmenu pmenu-left">
+    <div class="brand-box">
+      <div class="spacer-sm"></div>
+      <div class="tx-center menu-brand">
+        <img class="" src="images/logo.png" width="100px" />
+        <p>qwerty</p>
       </div>
-      <ul class="brand-ul">
-        <li class="pmenu-link"><a href="./index.html"><i class="icon ion-android-list"></i>&nbsp;&nbsp;Intro</a></li>
-        <li class="pmenu-link"><a href="./concept.html"><i class="icon ion-coffee"></i>&nbsp;&nbsp;Conception</a></li>
-        <li class="pmenu-link active"><a href="./kanpe.html"><i class="icon ion-code"></i>&nbsp;&nbsp;CheetSheet</a></li>
-        <li class="pmenu-submenu">
-            <a href="#"><i class="icon ion-document-text"></i>&nbsp;&nbsp;Themses  <i class="pmenu-icon icon ion-ios-arrow-right"></i></a>
-            <ul>
-                <li class="pmenu-link"><a href="">Coming Soon...</a></li>
-            </ul>
-        </li>
-        <li class="pmenu-link"><a href="https://github.com/thousandjapan/qwerty" target="_blank"><i class="icon ion-social-github"></i>&nbsp;&nbsp;Guthub <i class="icon ion-android-open"></i></a></li>
-      </ul>
-    </nav>
-    <div class="header-center">
-      <a href="index.html"><h4 class="logo">QWERTY</h4></a>
+      <div class="spacer-sm"></div>
     </div>
-    <div class="header-right">
-      <a class=""><i class="icon ion-ios-search-strong"></i></a>
-    </div>
-  </header>
+    <ul class="brand-ul">
+      <li class="pmenu-link"><a href="./index.html"><i class="icon ion-android-list"></i>&nbsp;&nbsp;Intro</a></li>
+      <li class="pmenu-link"><a href="./concept.html"><i class="icon ion-coffee"></i>&nbsp;&nbsp;Conception</a></li>
+      <li class="pmenu-link active"><a href="./kanpe.html"><i class="icon ion-code"></i>&nbsp;&nbsp;CheetSheet</a></li>
+      <li class="pmenu-submenu">
+          <a href="#"><i class="icon ion-document-text"></i>&nbsp;&nbsp;Themses  <i class="pmenu-icon icon ion-ios-arrow-right"></i></a>
+          <ul>
+              <li class="pmenu-link"><a href="">Coming Soon...</a></li>
+          </ul>
+      </li>
+      <li class="pmenu-link"><a href="https://github.com/thousandjapan/qwerty" target="_blank"><i class="icon ion-social-github"></i>&nbsp;&nbsp;Guthub <i class="icon ion-android-open"></i></a></li>
+    </ul>
+  </nav>
+  <div class="header-center">
+    <a href="index.html"><h4 class="logo">qwerty</h4></a>
+  </div>
+  <div class="header-right">
+    <a class=""><i class="icon ion-ios-search-strong"></i></a>
+  </div>
+</header>
 
 <div class="site-overlay"></div>
 
@@ -82,13 +83,13 @@
     <div class="row">
       <div class="three cols card card-red"><!-- card -->
         <div class="head">
-          <i class="icon ion-close-circled"></i>&nbsp;これはヘッダーです。
+          <i class="icon ion-close-circled"></i>&nbsp;I'm head.
           <a class="circle-button fill-red">
             <i class="icon ion-code"></i>
           </a>
         </div>
         <div class="body">
-          これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。
+          The body is here. I'm This card is completely clear, modern, and customizable. You can try this card as soon as you click the top right corner button <i class="icon ion-code"></i>.
         </div>
         <div class="foot">
           <a href="#" class="tx-center one-half card-btn">
@@ -101,42 +102,51 @@
       </div>
       <div class="three cols card card-yellow"><!-- card -->
         <div class="head">
-          <i class="icon ion-alert-circled"></i>&nbsp;これはヘッダーです。
+          <i class="icon ion-alert-circled"></i>&nbsp;I'm head.
         </div>
         <div class="body">
-          こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。
+          The body is here. I'm This card is completely clear, modern, and customizable. You can try this card as soon as you click the top right corner button <i class="icon ion-code"></i>.
         </div>
         <div class="foot">
-          <a href="#" class="tx-center one-half card-btn">
-            <i class="icon ion-compose"></i>&nbsp;Edit
+          <a href="#" class="tx-center one-third card-btn">
+            <i class="icon ion-star"></i>&nbsp;left
           </a>
-          <a href="#" class="tx-center one-half card-btn danger">
-            <i class="icon ion-trash-a"></i>&nbsp;Delete
+          <a href="#" class="tx-center one-third card-btn">
+            <i class="icon ion-heart"></i>&nbsp;center
+          </a>
+          <a href="#" class="tx-center one-third card-btn">
+            <i class="icon ion-stop"></i>&nbsp;right
           </a>
         </div>
       </div>
       <div class="three cols card card-green"><!-- card -->
         <div class="head">
-          <i class="icon ion-checkmark-circled"></i>&nbsp;これはヘッダーです。
+          <i class="icon ion-checkmark-circled"></i>&nbsp;I'm head.
         </div>
         <div class="body">
-          こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。
+          The body is here. I'm This card is completely clear, modern, and customizable. You can try this card as soon as you click the top right corner button <i class="icon ion-code"></i>.
         </div>
         <div class="foot">
-          <a href="#" class="tx-center one-half card-btn">
-            <i class="icon ion-compose"></i>&nbsp;Edit
+          <a href="#" class="tx-center three cols card-btn">
+            <i class="icon ion-ios-home"></i>
           </a>
-          <a href="#" class="tx-center one-half card-btn danger">
-            <i class="icon ion-trash-a"></i>&nbsp;Delete
+          <a href="#" class="tx-center three cols card-btn">
+            <i class="icon ion-ios-cloud-download"></i
+          </a>
+          <a href="#" class="tx-center three cols card-btn">
+            <i class="icon ion-ios-pricetags"></i>
+          </a>
+          <a href="#" class="tx-center three cols card-btn">
+            <i class="icon ion-ios-more"></i>
           </a>
         </div>
       </div>
       <div class="three cols card card-blue"><!-- card -->
         <div class="head">
-          <i class="icon ion-android-alert"></i>&nbsp;これはヘッダーです。
+          <i class="icon ion-android-alert"></i>&nbsp;I'm head.
         </div>
         <div class="body">
-          こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。
+          The body is here. I'm This card is completely clear, modern, and customizable. You can try this card as soon as you click the top right corner button <i class="icon ion-code"></i>.
         </div>
         <div class="foot">
           <a href="#" class="tx-center one-half card-btn">
@@ -166,18 +176,14 @@
       </div>
       <div class="six cols card card-blue"><!-- card -->
         <div class="head">
-          <i class="icon ion-android-alert"></i>&nbsp;これはヘッダーです。
+          <i class="icon ion-android-alert"></i>&nbsp;I'm head.
         </div>
         <div class="body">
-          こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。こんにちは。これは本文です。
+          The body is here. I'm This card is completely clear, modern, and customizable. You can try this card as soon as you click the top right corner button <i class="icon ion-code"></i>.
         </div>
         <div class="foot">
-          <a href="#" class="tx-center one-half card-btn">
-            <i class="icon ion-compose"></i>&nbsp;Edit
-          </a>
-          <a href="#" class="tx-center one-half card-btn danger">
-            <i class="icon ion-trash-a"></i>&nbsp;Delete
-          </a>
+          <span class="left">I'm Awesome left foot. </span>
+          <span class="right">I'm Awesome right foot. </span>
         </div>
       </div>
     </div>
@@ -207,9 +213,11 @@
                 </select>
               </div>
             </div>
+            <div class="row">
             <label for="exampleMessage">Message</label>
             <textarea class="qw-fullwidth" placeholder="Hi Dave …" id="exampleMessage"></textarea>
-            <div class="row">
+            </div>
+            <div class="row tx-center">
                 <div>
                   <h6>Choose one.</h6>
                   <input type="radio" name="sample-radio" checked="checked" id="radio-1" /><label for="radio-1">Windows</label>
@@ -219,8 +227,8 @@
                 <div>
                     <input type="checkbox" name="sample-checkbox" checked="checked" id="checkbox" /><label for="checkbox">Do you agree to the <a href="#">Terms of Use?</a></label>
                 </div>
+                <input class="btn" type="submit" value="Submit">
             </div>
-            <input class="btn-dark" type="submit" value="Submit">
           </form>
         </div>
       </div>
@@ -268,10 +276,10 @@
         </div>
       </div>
       <div class="row">
-        <div class="twelve cols card"><!-- card -->
+        <div class="six cols card"><!-- card -->
           <div class="head">
             <div class="title">
-              Text Align
+              Headings
             </div>
             <a class="circle-button">
               <i class="icon ion-code"></i>
@@ -279,118 +287,110 @@
           </div>
           <div class="body">
             <div class="row">
-              <div class="three cols fill-dark">
-                <p class="tx-center">This Text align to center.</p>
+              <h1>Heading(h1)</h1>
+              <h2>Heading(h2)</h2>
+              <h3>Heading(h3)</h3>
+              <h4>Heading(h4)</h4>
+              <h5>Heading(h5)</h5>
+              <h6>Heading(h6)</h6>
+            </div>
+          </div>
+        </div>
+        <div class="six cols card"><!-- card -->
+          <div class="head">
+            <div class="title">
+              Styled Text
+            </div>
+            <a class="circle-button">
+              <i class="icon ion-code"></i>
+            </a>
+          </div>
+          <div class="body">
+            <div class="row">
+              <strong>Bolded</strong>
+              <em>Italicized</em>
+              <a>Colored</a>
+              <u>Underlined</u>
+            </div>
+            <div class="row">
+              <div class="one col">One</div>
+              <div class="eleven cols">Eleven</div>
+            </div>
+
+            <div class="row">
+              <div class="two cols">Two</div>
+              <div class="ten cols">Ten</div>
+            </div>
+              <div class="row">
+                <div class="one-third col">1/3</div>
+                <div class="two-thirds col">2/3</div>
               </div>
-              <div class="three cols fill-dark">
-                <p class="tx-right">This Text align to right.</p>
+              <div class="row">
+                <div class="one-half col">1/2</div>
+                <div class="one-half col">1/2</div>
               </div>
-              <div class="three cols fill-dark">
-                <p class="tx-left">This Text align to left.</p>
-              </div>
-              <div class="three cols fill-dark">
-                <p class="tx-justify">This is justify text.This is justify text.This is justify text.This is justify text.This is justify text.</p>
-              </div>
+          </div>
+        </div>
+        <div class="six cols card"><!-- card -->
+          <div class="head">
+            Button element
+          </div>
+          <div class="body">
+            <div class="row">
+              <button class="btn btn-dark btn-sm">btn-sm</button>
+              <button class="btn btn-dark btn-md">btn-md</button>
+              <button class="btn btn-dark btn-lg">btn-lg</button>
             </div>
           </div>
         </div>
       </div>
+      <div class="row">
+        <div class="qw-box">
+          <table class="qw-fullwidth">
+            <thead>
+              <tr>
+                <th>Name</th>
+                <th>Age</th>
+                <th>Sex</th>
+                <th>Location</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Chad Smith</td>
+                <td>54</td>
+                <td>Male</td>
+                <td>Saint Paul</td>
+              </tr>
+              <tr>
+                <td>Thomas lang</td>
+                <td>49</td>
+                <td>Male</td>
+                <td>Wien</td>
+              </tr>
+              <tr>
+                <td>Mike Portnoy</td>
+                <td>49</td>
+                <td>Male</td>
+                <td>Long Beach</td>
+              </tr>
+              <tr>
+                <td>John Henry Bonham</td>
+                <td>-</td>
+                <td>Male</td>
+                <td>Redditch</td>
+              </tr>
+              <tr>
+                <td>Tatsuya Amano</td>
+                <td>25?</td>
+                <td>Male</td>
+                <td>Osaka</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
     </div>
-  </div>
-
-
-  <!-- .pack is main centered wrap -->
-  <div class="pack">
-    <!-- Standard Headings -->
-    <h1>Heading(h1)</h1>
-    <h2>Heading(h2)</h2>
-    <h3>Heading(h3)</h3>
-    <h4>Heading(h4)</h4>
-    <h5>Heading(h5)</h5>
-    <h6>Heading(h6)</h6>
-
-    <!-- Base type size -->
-    <p>The base type is 15px over 1.6 line height (24px)</p>
-
-    <!-- Other styled text tags -->
-    <strong>Bolded</strong>
-    <em>Italicized</em>
-    <a>Colored</a>
-    <u>Underlined</u>
-    <!-- cols should be the immediate child of a .row -->
-    <div class="row">
-      <div class="one col">One</div>
-      <div class="eleven cols">Eleven</div>
-    </div>
-
-    <!-- just use a number and class 'col' or 'cols' -->
-    <div class="row">
-      <div class="two cols">Two</div>
-      <div class="ten cols">Ten</div>
-    </div>
-
-    <!-- there are a few shorthand cols widths as well -->
-    <div class="row">
-      <div class="one-third col">1/3</div>
-      <div class="two-thirds col">2/3</div>
-    </div>
-    <div class="row">
-      <div class="one-half col">1/2</div>
-      <div class="one-half col">1/2</div>
-    </div>
-    <!-- Standard buttons -->
-    <h5>Button element</h5>
-    <div class="row">
-      <button class="btn btn-dark btn-sm">btn-sm</button>
-      <button class="btn btn-dark btn-md">btn-md</button>
-      <button class="btn btn-dark btn-lg">btn-lg</button>
-    </div>
-    <div class="spacer-1"></div>
-    <div class="qw-box">
-      <table class="qw-fullwidth">
-        <thead>
-          <tr>
-            <th>Name</th>
-            <th>Age</th>
-            <th>Sex</th>
-            <th>Location</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Chad Smith</td>
-            <td>54</td>
-            <td>Male</td>
-            <td>Saint Paul</td>
-          </tr>
-          <tr>
-            <td>Thomas lang</td>
-            <td>49</td>
-            <td>Male</td>
-            <td>Wien</td>
-          </tr>
-          <tr>
-            <td>Mike Portnoy</td>
-            <td>49</td>
-            <td>Male</td>
-            <td>Long Beach</td>
-          </tr>
-          <tr>
-            <td>John Henry Bonham</td>
-            <td>-</td>
-            <td>Male</td>
-            <td>Redditch</td>
-          </tr>
-          <tr>
-            <td>Tatsuya Amano</td>
-            <td>25?</td>
-            <td>Male</td>
-            <td>Osaka</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-
   </div>
 </div>
 
