--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>QWERTY</title>
+  <title>qwerty</title>
   <meta name="description" content="">
   <meta name="author" content="">
   <!-- Mobile Specific Metas
@@ -14,6 +14,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link href="https://fonts.googleapis.com/css?family=Catamaran:200,400,500,600,800" rel="stylesheet">
   <link rel="stylesheet" href="http://fonts.googleapis.com/earlyaccess/notosansjp.css">
+  <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/qwerty.css">
@@ -36,7 +37,7 @@
         <div class="spacer-sm"></div>
         <div class="tx-center menu-brand">
           <img class="" src="images/logo.png" width="100px" />
-          <p>QWERTY</p>
+          <p>qwerty</p>
         </div>
         <div class="spacer-sm"></div>
       </div>
@@ -54,7 +55,7 @@
       </ul>
     </nav>
     <div class="header-center">
-      <a href="index.html"><h4 class="logo">QWERTY</h4></a>
+      <a href="index.html"><h4 class="logo">qwerty</h4></a>
     </div>
     <div class="header-right">
       <a class=""><i class="icon ion-ios-search-strong"></i></a>
