modify grid system

--- a/kanpe.html
+++ b/kanpe.html
@@ -127,16 +127,16 @@
           The body is here. I'm This card is completely clear, modern, and customizable. You can try this card as soon as you click the top right corner button <i class="icon ion-code"></i>.
         </div>
         <div class="foot">
-          <a href="#" class="tx-center three cols card-btn">
+          <a href="#" class="tx-center one-fourth card-btn">
             <i class="icon ion-ios-home"></i>
           </a>
-          <a href="#" class="tx-center three cols card-btn">
+          <a href="#" class="tx-center one-fourth card-btn">
             <i class="icon ion-ios-cloud-download"></i
           </a>
-          <a href="#" class="tx-center three cols card-btn">
+          <a href="#" class="tx-center one-fourth card-btn">
             <i class="icon ion-ios-pricetags"></i>
           </a>
-          <a href="#" class="tx-center three cols card-btn">
+          <a href="#" class="tx-center one-fourth card-btn">
             <i class="icon ion-ios-more"></i>
           </a>
         </div>
